--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,11 +1,12 @@
 .card{
     font-family: 'Poppins', sans-serif;
 
-    padding: 30px 15px;
+    padding: 30px 10px;
 }
 
 .div--photo{
     width: 200px;
+    position: relative;
 }
 
 .reviews{
@@ -46,4 +47,16 @@
 
 .price > h5 {
     padding-top: 3px;
+}
+
+.soldout{
+    position: absolute;
+    z-index: 99;
+    margin: 6px;
+    padding: 1px 6px;
+    background-color: aliceblue;
+    border-radius: 2px;
+    font-size: 11px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-weight: 600;
 }
